--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <hsqldb.version>2.4.0</hsqldb.version>
   </properties>
 
   <dependencies>
@@ -22,11 +23,12 @@
       <scope>test</scope>
     </dependency>
     <!-- https://mvnrepository.com/artifact/org.hsqldb/hsqldb -->
-	<dependency>
-	    <groupId>org.hsqldb</groupId>
-	    <artifactId>hsqldb</artifactId>
-	    <version>2.3.0</version>
-	</dependency>
-    
+<dependency>
+    <groupId>org.hsqldb</groupId>
+    <artifactId>hsqldb</artifactId>
+    <version>2.4.0</version>
+</dependency>
+
+
   </dependencies>
 </project>
